--- a/abhiram cyber.html
+++ b/abhiram cyber.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name=<meta name="google-site-verification" content="PWXS-Mr9yYpVGdm-fqrldVIyQEaH60oyGR0Ta6lhFEM" />
+    <meta name="google-site-verification" content="PWXS-Mr9yYpVGdm-fqrldVIyQEaH60oyGR0Ta6lhFEM" />
     <title>LearnHub - Education Platform</title>
     <style>
         * {
